cluster/default/adguardhome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome
  namespace: default
spec:
  type: ExternalName
  externalName: pir.sko.ai
