cluster/default/adguardhome/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: adguardhome
  namespace: default
  annotations:
    kubernetes.io/ingress.class: internal
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: ad.sko.ai
      http:
        paths:
          - backend:
              serviceName: adguardhome
              servicePort: 3000
            path: /
